Add "opens com.sun.tools.javac.code" for jdk.compiler